--- a/src/components/AppHeader/HeaderContent/HeaderContent.module.scss
+++ b/src/components/AppHeader/HeaderContent/HeaderContent.module.scss
@@ -4,8 +4,9 @@
 @import '../../../styles/mixins/_var';
 
 .header__content {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+	//display: grid;
+	//grid-template-columns: 2fr 1fr;
+	display: flex;
 	justify-content: space-between;
 	align-items: center;
 
@@ -16,6 +17,7 @@
 	&__logo {
 		width: 141px;
 		height: 141px;
+		margin-right: 401px;
 
 		img {
 			width: 100%;
@@ -45,34 +47,60 @@
 }
 
 .header__menu {
+	display: flex;
 }
 
 // адаптивная верстка
 @media (max-width: 767px) {
 	.header__content {
-		display: inline-flex;
-		justify-content: flex-start;
-		gap: 194px;
+		display: flex;
+		align-items: center;
+		position: relative;
 
 		&__burger {
 			display: block;
+			//position: relative;
 			width: 30px;
 			height: 25px;
+
+			//&:before,
+			//&:after,
+			//& span {
+			//	content: '';
+			//	position: absolute;
+			//	left: 0;
+			//	width: 100%;
+			//	height: 5px;
+			//	background: #029491;
+			//}
+			//
+			//&:before {
+			//	top: 0;
+			//}
+			//
+			//&:after {
+			//	bottom: 0;
+			//}
+			//
+			//& span {
+			//	top: 10px;
+			//}
+		}
+
+		&__logo {
+			width: 111px;
+			height: 111px;
+			margin-right: 194px;
+		}
+
+		/* Блок - навигационные ссылки */
+		&__navLinks {
+			display: none;
 		}
 	}
 
-	&__logo {
-		width: 111px;
-		height: 111px;
-	}
-
-	/* Блок - навигационные ссылки */
-	&__navLinks {
+	.header__menu {
 		display: none;
 	}
-
 }
 
-.header__menu {
-	display: none;
-}
