--- a/src/pages/LoginPage/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.scss
@@ -1,174 +1,289 @@
 // LoginForm.module.scss
 .cardContainer {
-    width: 100%;
-    height: 100%;
-    position: relative;
+	width: 100%;
+	height: 100%;
+	position: relative;
 
-    //.overlay {
-    //    width: 100%;
-    //    height: 100%;
-    //    position: absolute;
-    //    background: rgba(0, 0, 0, 0.5);
-    //}
+	.contentContainer {
+		width: 429px;
+		height: 523px;
+		left: 0;
+		top: 0;
+		margin-top: 65px;
+		background: white;
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+		border-radius: 10px;
+		position: relative;
+	}
 
-    .contentContainer {
-        width: 429px;
-        height: 523px;
-        left: 0;
-        top: 0;
-        margin-top: 65px;
-        background: white;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-        border-radius: 10px;
-        position: relative;
-    }
+	.boldLine {
+		width: 151px;
+		height: 2px;
+		background: #029491;
+		position: absolute;
+		margin-top: 52px;
+		margin-left: 25px;
+	}
 
-    .boldLine {
-        width: 151px;
-        height: 2px;
-        background: #029491;
-        position: absolute;
-        margin-top: 52px;
-        margin-left: 25px;
-    }
+	.line {
+		width: 213px;
+		height: 2px;
+		background: #c7c7c7;
+		position: absolute;
+		margin-top: 52px;
+		margin-left: 188px;
+	}
 
-    .line {
-        width: 213px;
-        height: 2px;
-        background: #c7c7c7;
-        position: absolute;
-        margin-top: 52px;
-        margin-left: 188px;
-    }
+	.enter {
+		display: flex;
+		position: relative;
+	}
 
-    .enter {
-        display: flex;
-        position: relative;
-    }
-
-    .enterHr {
-        display: flex;
-    }
+	.enterHr {
+		display: flex;
+	}
 
 
-    .enter1 {
-        color: #029491;
-        font-family: 'Inter', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0.16px;
-        word-wrap: break-word;
-        margin-left: 77px;
-        margin-top: 25px;
-        position: relative; /* Added position relative for ::after to position absolutely */
-    }
+	.enter1 {
+		color: #029491;
+		font-family: 'Inter', sans-serif;
+		font-size: 16px;
+		font-weight: 400;
+		letter-spacing: 0.16px;
+		word-wrap: break-word;
+		margin-left: 77px;
+		margin-top: 25px;
+		position: relative; /* Added position relative for ::after to position absolutely */
+	}
 
-    .enter2 {
-        color: #c7c7c7;
-        font-family: 'Inter', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0.16px;
-        word-wrap: break-word;
-        margin-left: 77px;
-        margin-top: 25px;
-        position: relative; /* Added position relative for ::after to position absolutely */
-    }
-
-
-    .input {
-        width: 379px;
-        height: 43px;
-        flex-shrink: 0;
-        border-radius: 5px;
-        //background: #c7c7c7;
-        margin-left: 25px;
-        margin-top: 28px;
-    }
-
-    .button {
-        width: 379px;
-        height: 59px;
-        flex-shrink: 0;
-        border-radius: 5px;
-        background: #5970ff;
-        margin-left: 25px;
-        margin-top: 88px;
-    }
-
-    .buttonText {
-        color: #FFFFFF;
-        font-family: 'Inter', sans-serif;
-        font-size: 22px;
-        font-weight: 500;
-        letter-spacing: 0.22px;
-        word-wrap: break-word;
-    }
-
-    .enterLoginText {
-        color: #029491;
-        font-family: 'Inter', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0.32px;
-        word-wrap: break-word;
-        margin-left: 25px;
-        margin-top: 40px;
-    }
-
-    .enterPasswordText {
-        color: #029491;
-        font-family: 'Inter', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0.32px;
-        word-wrap: break-word;
-        margin-left: 25px;
-        margin-top: 20px;
-    }
-
-    .recoverPass {
-        color: #5970ff;
-        font-family: 'Inter', sans-serif;
-        font-size: 14px;
-        font-weight: 400;
-        letter-spacing: 0.28px;
-        word-wrap: break-word;
-        margin-left: 25px;
-        margin-top: 40px;
-    }
-
-    .enterText {
-        color: #c7c7c7;
-        font-family: 'Inter', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0.32px;
-        word-wrap: break-word;
-        margin-left: 25px;
-        margin-bottom: 10px;
-    }
-
-    .socialIcons {
-        display: flex;
-    }
-
-    .google {
-        margin-left: 25px;
-        margin-bottom: 39px;
-    }
+	.enter2 {
+		color: #c7c7c7;
+		font-family: 'Inter', sans-serif;
+		font-size: 16px;
+		font-weight: 400;
+		letter-spacing: 0.16px;
+		word-wrap: break-word;
+		margin-left: 77px;
+		margin-top: 25px;
+		position: relative; /* Added position relative for ::after to position absolutely */
+	}
 
 
-    .facebook {
-        margin-left: 10px;
-        margin-bottom: 39px;
-    }
+	.input {
+		width: 379px;
+		height: 43px;
+		flex-shrink: 0;
+		border-radius: 5px;
+		//background: #c7c7c7;
+		margin-left: 25px;
+		margin-top: 28px;
+	}
+
+	.button {
+		width: 379px;
+		height: 59px;
+		flex-shrink: 0;
+		border-radius: 5px;
+		background: #5970ff;
+		margin-left: 25px;
+		margin-top: 88px;
+	}
+
+	.buttonText {
+		color: #FFFFFF;
+		font-family: 'Inter', sans-serif;
+		font-size: 22px;
+		font-weight: 500;
+		letter-spacing: 0.22px;
+		word-wrap: break-word;
+	}
+
+	.enterLoginText {
+		color: #029491;
+		font-family: 'Inter', sans-serif;
+		font-size: 16px;
+		font-weight: 400;
+		letter-spacing: 0.32px;
+		word-wrap: break-word;
+		margin-left: 25px;
+		margin-top: 40px;
+	}
+
+	.enterPasswordText {
+		color: #029491;
+		font-family: 'Inter', sans-serif;
+		font-size: 16px;
+		font-weight: 400;
+		letter-spacing: 0.32px;
+		word-wrap: break-word;
+		margin-left: 25px;
+		margin-top: 20px;
+	}
+
+	.recoverPass {
+		color: #5970ff;
+		font-family: 'Inter', sans-serif;
+		font-size: 14px;
+		font-weight: 400;
+		letter-spacing: 0.28px;
+		word-wrap: break-word;
+		margin-left: 25px;
+		margin-top: 40px;
+	}
+
+	.enterText {
+		color: #c7c7c7;
+		font-family: 'Inter', sans-serif;
+		font-size: 16px;
+		font-weight: 400;
+		letter-spacing: 0.32px;
+		word-wrap: break-word;
+		margin-left: 25px;
+		margin-bottom: 10px;
+	}
+
+	.socialIcons {
+		display: flex;
+	}
+
+	.google {
+		margin-left: 25px;
+		margin-bottom: 39px;
+	}
+
+	.facebook {
+		margin-left: 10px;
+		margin-bottom: 39px;
+	}
+
+	.yandex {
+		margin-left: 10px;
+		margin-bottom: 39px;
+	}
+}
+
+@media (max-width: 767px) {
+	.cardContainer {
+		margin-right: 26px;
+		margin-left: 14px;
+
+		.contentContainer {
+			width: 335px;
+			height: 504px;
+		}
+
+		.boldLine {
+			width: 103px;
+			margin-top: 52px;
+			margin-left: 15px;
+		}
+
+		.line {
+			width: 182px;
+			margin-top: 52px;
+			margin-left: 138px;
+		}
+
+		.enter {
+			display: flex;
+			position: relative;
+		}
+
+		.enterHr {
+			display: flex;
+		}
 
 
-    .yandex {
-        margin-left: 10px;
-        margin-bottom: 39px;
+		.enter1 {
+			font-size: 14px;
+			letter-spacing: 0.28px;
+			margin-left: 46px;
+			margin-top: 25px;
+		}
 
-    }
+		.enter2 {
+			font-size: 14px;
+			letter-spacing: 0.28px;
+			margin-left: 70px;
+			margin-top: 25px;
+		}
 
+		.input {
+			width: 379px;
+			height: 43px;
+			flex-shrink: 0;
+			border-radius: 5px;
+			//background: #c7c7c7;
+			margin-left: 25px;
+			margin-top: 28px;
+		}
+
+		.button {
+			width: 305px;
+			height: 59px;
+			margin: 40px 15px 15px;
+		}
+
+		.buttonText {
+			font-size: 20px;
+			letter-spacing: 0.40px;
+		}
+
+		.enterLoginText {
+			font-size: 16px;
+			font-weight: 400;
+			letter-spacing: 0.32px;
+			word-wrap: break-word;
+			margin-left: 25px;
+			margin-top: 40px;
+		}
+
+		.enterPasswordText {
+			font-size: 16px;
+			font-weight: 400;
+			letter-spacing: 0.32px;
+			word-wrap: break-word;
+			margin-left: 25px;
+			margin-top: 20px;
+		}
+
+		.recoverPass {
+			font-size: 14px;
+			font-weight: 400;
+			letter-spacing: 0.28px;
+			word-wrap: break-word;
+			margin-left: 90px;
+		}
+
+		.enterText {
+			font-size: 16px;
+			font-weight: 400;
+			letter-spacing: 0.32px;
+			word-wrap: break-word;
+			margin-left: 15px;
+			margin-top: 20px;
+			margin-bottom: 15px;
+		}
+
+		.socialIcons {
+			display: flex;
+			margin-bottom: 20px;
+
+		}
+
+		.google {
+			margin-left: 15px;
+		}
+
+
+		.facebook {
+			margin-left: 9px;
+		}
+
+
+		.yandex {
+			margin-left: 9px;
+
+		}
+	}
 }
