--- a/src/pages/LoginPage/LoginForm/LoginInput/LoginInput.module.scss
+++ b/src/pages/LoginPage/LoginForm/LoginInput/LoginInput.module.scss
@@ -1,12 +1,23 @@
 // LoginInput.module.scss
 .input {
-  width: 379px;
-  height: 43px;
-  margin-right: 25px;
-  margin-left: 25px;
-  margin-top: 15px;
-  background: white;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
-  border: 1px #C7C7C7 solid;
+	width: 379px;
+	height: 43px;
+	margin-right: 25px;
+	margin-left: 25px;
+	margin-top: 15px;
+	background: white;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+	border-radius: 5px;
+	border: 1px #C7C7C7 solid;
+}
+
+@media (max-width: 767px) {
+	.input {
+		width: 305px;
+		height: 43px;
+		margin-right: 15px;
+		margin-left: 15px;
+		margin-top: 15px;
+
+	}
 }
