--- a/src/pages/LoginPage/LoginForm/PasswordInput/PasswordInput.module.scss
+++ b/src/pages/LoginPage/LoginForm/PasswordInput/PasswordInput.module.scss
@@ -11,3 +11,14 @@
   border-radius: 5px;
   border: 1px #C7C7C7 solid;
 }
+
+@media (max-width: 767px) {
+  .input {
+    width: 305px;
+    height: 43px;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-top: 15px;
+
+  }
+}
