--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,12 +1,31 @@
 /* LoginPage.module.scss */
 
 .loginPage {
-  display: flex;
-  //justify-content: space-between;
-  width: 1440px;
-  height: 672px;
-  align-items: flex-start;
-  flex-shrink: 0;
-  background: #FFF;
+	display: flex;
+	justify-content: space-between;
+	width: 1440px;
+	height: 672px;
+	align-items: flex-start;
+	flex-shrink: 0;
+	background: #FFF;
+
+	&__padLock {
+		margin-left: 60px;
+		margin-top: -17px;
+		z-index: 1;
+	}
+}
+
+@media (max-width: 767px) {
+	.loginPage {
+		display: block;
+
+		&__padLock {
+			width: 76px;
+			height: 92px;
+			margin-left: 95px;
+			margin-top: 45px;
+		}
+	}
 }
 
