--- a/src/pages/LoginPage/LoginPageCharacters/LoginPageCharacters.module.scss
+++ b/src/pages/LoginPage/LoginPageCharacters/LoginPageCharacters.module.scss
@@ -1,10 +1,20 @@
 /* SearchPageCharacters/SearchPageCharacters.module.scss */
 
 .imgLoginPageCharacters {
-  flex-shrink: 0;
-  margin-top: 50px;
-  width: 322px;
-  height: 342px;
-  margin-bottom: 100px;
-  margin-left: 172px;
+	flex-shrink: 0;
+	margin-top: 50px;
+	width: 322px;
+	height: 342px;
+	margin-bottom: 100px;
+	margin-left: 172px;
+}
+
+@media (max-width: 767px) {
+	.imgLoginPageCharacters {
+		//position: absolute;
+		width: 335px;
+		height: 356px;
+		margin: 54px 26px 20px 14px;
+
+	}
 }
