--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -11,17 +11,19 @@
 	background: $white;
 	box-shadow: 0 0 20px $shadow;
 	border-radius: 10px;
-	margin-top: 47px;
+	margin-top: 378px;
 	margin-bottom: 64px;
 	margin-left: 53px;
 	align-items: center;
 
 	&__inn {
-		width: 242px;
-		height: 43px;
-		left: 44px;
-		top: 71px;
-		position: absolute;
+		width: 100%;
+		height: 100%;
+		//width: 242px;
+		//height: 43px;
+		//left: 44px;
+		//top: 71px;
+		//position: absolute;
 
 		&__label {
 			left: 0;
@@ -45,17 +47,8 @@
 	}
 
 	&__tonality {
-		width: 242px;
-		height: 43px;
-		left: 44px;
-		top: 186px;
-		position: absolute;
-		color: $black;
-		font-size: 18px;
-		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.54px;
-		word-wrap: break-word;
+		width: 100%;
+		height: 100%;
 
 		&__label {
 			left: 0;
@@ -79,11 +72,8 @@
 	}
 
 	&__documentCount {
-		width: 242px;
-		height: 43px;
-		left: 44px;
-		top: 301px;
-		position: absolute;
+		width: 100%;
+		height: 100%;
 
 		&__label {
 			left: 0;
@@ -125,7 +115,7 @@
 		display: flex;
 		flex-direction: row;
 		margin-left: 44px;
-		margin-top: 425px;
+		margin-top: -1225px;
 	}
 }
 
