--- a/src/pages/Main/BeginnerTariffCard/BeginnerTariffCard.module.scss
+++ b/src/pages/Main/BeginnerTariffCard/BeginnerTariffCard.module.scss
@@ -1,227 +1,219 @@
-// BeginnerTariffCard/BeginnerTariffCard.module.scss
+/* BeginnerTariffCard/BeginnerTariffCard.module.scss */
 
-@mixin labelStyles {
-  font-size: 18px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.18px;
-  word-wrap: break-word;
-  margin-top: 5px;
-}
+@import '../../../styles/mixins/_typography';
+@import '../../../styles/mixins/_var';
 
 .container {
-  width: 415px;
-  height: 540px;
-  background: white;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  border: 2px #FFB64F solid;
-  position: relative;
-  margin-top: 70px;
-  margin-bottom: 80px;
+	width: 415px;
+	height: 540px;
+	background: white;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	border: 2px #FFB64F solid;
+	position: relative;
+	margin-top: 70px;
+	margin-bottom: 80px;
+
+	&__orangeTop {
+		width: 413px;
+		height: 132px;
+		background: #FFB64F;
+		border-top-left-radius: 10px;
+		border-top-right-radius: 10px;
+
+		&_iconLightBulb {
+			width: 93px;
+			height: 84px;
+			margin-top: -120px;
+			margin-left: 310px;
+		}
+	}
+
+	&__title {
+		color: black;
+		font-size: 30px;
+		font-family: 'Inter', sans-serif;
+		font-weight: 500;
+		letter-spacing: 0.30px;
+		word-wrap: break-word;
+		position: absolute;
+		top: 30px;
+		left: 30px;
+	}
+
+	&__blueStripe {
+		width: 134px;
+		height: 24px;
+		background: #3BA5E0;
+		border-radius: 10px;
+		position: absolute;
+		top: 144px;
+		left: 271px;
+	}
+
+	&__currentTariffLabel {
+		@include text-base;
+		color: white;
+		position: absolute;
+		word-wrap: break-word;
+		margin-top: -367px;
+		margin-left: 284px;
+	}
+
+	&__personalCabinetButton {
+		width: 355px;
+		height: 59px;
+		background: #D2D2D2;
+		border-radius: 5px;
+		margin-top: 305px;
+		margin-left: 30px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		&_personalCabinetText {
+			color: black;
+			font-size: 20px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.20px;
+			word-wrap: break-word;
+		}
+	}
+
+	&__infoTextTitle {
+		color: black;
+		font-size: 18px;
+		font-family: 'Inter', sans-serif;
+		font-weight: 400;
+		letter-spacing: 0.18px;
+		word-wrap: break-word;
+		position: absolute;
+		top: 76px;
+		left: 30px;
+	}
+
+	&__priceTitle {
+		color: black;
+		margin-top: -350px;
+		margin-left: 30px;
+
+		&_infoText {
+			color: black;
+			font-size: 18px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.18px;
+			word-wrap: break-word;
+			top: 165px;
+			left: 30px;
+		}
+
+		&_price {
+			margin-top: 33px;
+			color: black;
+			font-size: 30px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 500;
+			letter-spacing: 0.30px;
+			word-wrap: break-word;
+		}
+
+		&_priceHigh {
+			margin-top: 168px;
+			margin-left: 19px;
+			color: black;
+			opacity: 0.50;
+			font-size: 25px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 500;
+			letter-spacing: 0.25px;
+			word-wrap: break-word;
+		}
+
+		&_currency {
+			color: black;
+			font-size: 18px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.18px;
+			word-wrap: break-word;
+		}
+	}
+
+	&__tariffItemsList {
+		margin-top: 73px;
+		margin-left: 30px;
+	}
 }
 
-.orangeTop {
-  width: 415px;
-  height: 132px;
-  background: #FFB64F;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
+
+@media (max-width: 767px) {
+	.container {
+		width: 335px;
+		height: 512px;
+		margin-top: 70px;
+		margin-bottom: 80px;
+		margin-left: 14px;
+
+		&__orangeTop {
+			width: 333px;
+			height: 132px;
+
+			&_iconLightBulb {
+				width: 59px;
+				height: 54px;
+				margin-top: -120px;
+				margin-left: 265px;
+			}
+		}
+
+		&__title {
+			font-size: 20px;
+			letter-spacing: 0.20px;
+			top: 30px;
+			left: 24px;
+		}
+
+		&__blueStripe {
+			display: none;
+		}
+
+		&__currentTariffLabel {
+			display: none;
+		}
+
+		&__priceTitle {
+			width: 273px;
+			margin-top: -330px;
+			margin-left: 24px;
+
+			&_currency {
+			}
+		}
+
+		&__tariffItemsList {
+			width: 305px;
+			margin-top: 55px;
+			margin-left: 25px;
+		}
+
+		&__personalCabinetButton {
+			width: 287px;
+			margin-left: 24px;
+			margin-top: 275px
+		;
+
+			&_personalCabinetText {
+				font-size: 18px;
+				letter-spacing: 0.18px;
+			}
+		}
+
+		&__infoTextTitle {
+			left: 24px;
+		}
+	}
 }
 
-.iconLightBulb {
-  width: 93px;
-  height: 84px;
-  position: absolute;
-  top: 11px;
-  left: 310px;
 
-}
-
-.blueStripe {
-  width: 134px;
-  height: 24px;
-  background: #3BA5E0;
-  border-radius: 10px;
-  position: absolute;
-  top: 144px;
-  left: 271px;
-}
-
-.personalCabinetButton {
-  width: 355px;
-  height: 59px;
-  background: #D2D2D2;
-  border-radius: 5px;
-  position: absolute;
-  top: 457px;
-  left: 30px;
-
-  .personalCabinetText {
-    color: black;
-    font-size: 20px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.20px;
-    word-wrap: break-word;
-    position: absolute;
-    top: 18px;
-    left: 45px;
-  }
-}
-
-.title {
-  color: black;
-  font-size: 30px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  letter-spacing: 0.30px;
-  word-wrap: break-word;
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
-
-.infoTextTitle {
-  color: black;
-  font-size: 18px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.18px;
-  word-wrap: break-word;
-  position: absolute;
-  top: 76px;
-  left: 30px;
-}
-
-.infoText {
-  color: black;
-  font-size: 18px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.18px;
-  word-wrap: break-word;
-  position: absolute;
-  top: 165px;
-  left: 30px;
-
-  .price {
-    margin-top: 33px;
-    color: black;
-    font-size: 30px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    letter-spacing: 0.30px;
-    word-wrap: break-word;
-  }
-
-  .priceHigh {
-    margin-top: 168px;
-    margin-left: 19px;
-    color: black;
-    opacity: 0.50;
-    font-size: 25px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    letter-spacing: 0.25px;
-    word-wrap: break-word;
-  }
-
-  .currency {
-    color: black;
-    font-size: 18px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.18px;
-    word-wrap: break-word;
-  }
-}
-
-.currentTariffLabel {
-  color: white;
-  font-size: 14px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.14px;
-  word-wrap: break-word;
-  position: absolute;
-  top: 147px;
-  left: 284px;
-}
-
-.includedItems {
-
-  width: 341px;
-  height: 110px;
-  background: white;
-  border-radius: 10px;
-  position: absolute;
-  top: 292px;
-  left: 30px;
-
-  .item {
-    display: flex;
-    align-items: center;
-    color: black;
-    font-size: 20px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    letter-spacing: 0.20px;
-    word-wrap: break-word;
-  }
-
-  .item1 {
-    @include labelStyles;
-    top: 0;
-    left: 28px;
-  }
-
-  .item2 {
-    @include labelStyles;
-    top: 34px;
-    left: 28px;
-  }
-
-  .item3 {
-    @include labelStyles;
-    top: 61px;
-    left: 28px;
-  }
-
-  .supportLabel {
-    color: black;
-    font-size: 18px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.18px;
-    word-wrap: break-word;
-    position: absolute;
-    top: 88px;
-    left: 28px;
-  }
-
-  .icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-    margin-top: 5px;
-  }
-
-  .icon1 {
-    top: 35px;
-    left: 0;
-  }
-
-  .icon2 {
-    top: 62px;
-    left: 0;
-  }
-
-  .icon3 {
-    top: 89px;
-    left: 0;
-  }
-}
