--- a/src/pages/Main/BlueCloudImage/BlueCloudImage.module.scss
+++ b/src/pages/Main/BlueCloudImage/BlueCloudImage.module.scss
@@ -1,8 +1,17 @@
 /* BlueCloudImage/BlueCloudImage.module.scss */
 
 .imgBlueCloudImage {
-    flex-shrink: 0;
-    margin-top: 50px;
-    margin-right: 82px;
-    margin-left: 51px;
+	margin-top: 50px;
+	margin-left: 51px;
+	margin-right: 82px;
+}
+
+@media (max-width: 767px) {
+	.imgBlueCloudImage {
+		width: 891px;
+		height: 393px;
+		margin-top: 80px;
+		margin-right: -530px;
+		margin-left: 14px;
+	}
 }
