--- a/src/pages/Main/BusinessTariffCard/BusinessTariffCard.module.scss
+++ b/src/pages/Main/BusinessTariffCard/BusinessTariffCard.module.scss
@@ -1,13 +1,6 @@
-// BusinessTariffCard/BusinessTariffCard.module.scss
+/* BusinessTariffCard/BusinessTariffCard.module.scss */
 
-@mixin labelStyles {
-  font-size: 18px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.18px;
-  word-wrap: break-word;
-  margin-top: 5px;
-}
+@import '../../../styles/mixins/_typography';
 
 .container {
   width: 415px;
@@ -22,7 +15,7 @@
 }
 
 .blackTop {
-  width: 415px;
+  width: 413px;
   height: 132px;
   background: #000000;
   border-top-left-radius: 10px;
@@ -38,17 +31,6 @@
   position: absolute;
   top: 11px;
   left: 310px;
-
-}
-
-.blueStripe {
-  width: 134px;
-  height: 24px;
-  background: #3BA5E0;
-  border-radius: 10px;
-  position: absolute;
-  top: 144px;
-  left: 271px;
 }
 
 .moreBusinessButton {
@@ -59,10 +41,10 @@
   position: absolute;
   top: 457px;
   left: 30px;
-  transition: background-color 0.3s ease;  // Добавляем анимацию перехода цвета фона
+  transition: background-color 0.3s ease;
 
   &:active {
-    background-color: darken(#5970ff, 10%);  // Затемняем цвет при нажатии
+    background-color: darken(#5970ff, 10%);
   }
 
   .moreText {
@@ -135,7 +117,6 @@
     letter-spacing: 0.25px;
     word-wrap: break-word;
   }
-
 }
 
 .currentTariffLabel {
@@ -151,7 +132,6 @@
 }
 
 .includedItems {
-
   width: 341px;
   height: 110px;
   background: white;
@@ -171,6 +151,25 @@
     word-wrap: break-word;
   }
 
+  .icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+
+  .supportLabel {
+    color: black;
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.18px;
+    word-wrap: break-word;
+    position: absolute;
+    top: 88px;
+    left: 28px;
+  }
+
   .item1 {
     @include labelStyles;
     top: 0;
@@ -187,25 +186,6 @@
     @include labelStyles;
     top: 61px;
     left: 28px;
-  }
-
-  .supportLabel {
-    color: black;
-    font-size: 18px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.18px;
-    word-wrap: break-word;
-    position: absolute;
-    top: 88px;
-    left: 28px;
-  }
-
-  .icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-    margin-top: 5px;
   }
 
   .icon1 {
