--- a/src/pages/Main/ImageRightBlock/ImageRightBlock.module.scss
+++ b/src/pages/Main/ImageRightBlock/ImageRightBlock.module.scss
@@ -1,19 +1,21 @@
 /* ImageRightBlock/ImageRightBlock.module.css */
 
 .imageRightBlock {
-    width: 629px;
-    height: 593px;
-    position: relative;
-    flex-shrink: 0;
-    margin-top: 120px;
-    margin-right: 98px;
-    margin-left: -98px;
+	width: 629px;
+	height: 593px;
+	position: relative;
+	flex-shrink: 0;
+	margin-top: 120px;
+	margin-right: 98px;
+	margin-left: -98px;
 }
 
-.imageRightBlock img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    padding-left: 18px;
-}
+@media (max-width: 767px) {
+	.imageRightBlock {
+		width: 348px;
+		height: 328px;
+		margin-left: 14px;
+		margin-top: 39px;
+	}
 
+}
