--- a/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
+++ b/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
@@ -1,75 +1,73 @@
 // LeftTextBlock.module.scss
 
 .leftTextBlock {
-    display: block;
-    margin-top: 69px;
-    min-width: 743px;
-    max-width: 950px;
-    padding-left: 60px;
-    position: relative;
-    right: -5px;
-    z-index: 1;
+	margin-top: 69px;
+	min-width: 743px;
+	max-width: 950px;
+	padding-left: 60px;
+	position: relative;
+	right: -5px;
+	z-index: 1;
 
-@media (max-width: 767px) {
-    // Стили для мобильных устройств
-    min-width: auto;
-    max-width: 100%;
-    //padding-left: 14px; // Подгоните под себя для меньших экранов
-    //margin-top: 20px; // Подгоните под себя для меньших экранов
+	&__leftText {
+		width: auto;
+		color: #000;
+		font-family: 'FerryBlack', sans-serif;
+		font-size: 3.75rem;
+		font-style: normal;
+		font-weight: 900;
+		line-height: normal;
+		letter-spacing: 0.6px;
+	}
+
+	&__leftSmallText {
+		width: 534px;
+		color: #000;
+		font-family: 'Inter', sans-serif;
+		font-size: 1.25rem; // Adjust font size using rem units
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+		letter-spacing: 0.2px;
+	}
+
+	&__buttonBlueUnderText {
+		color: #FFF;
+		font-family: 'Inter', sans-serif;
+		font-size: 1.375rem;
+		font-style: normal;
+		font-weight: 500;
+		line-height: normal;
+		letter-spacing: 0.22px;
+	}
 }
 
-    .leftText {
-        width: auto;
-        color: #000;
-        font-family: 'FerryBlack', sans-serif;
-        font-size: 3.75rem; // Используйте rem для более удобного масштабирования
-        font-style: normal;
-        font-weight: 900;
-        line-height: normal;
-        letter-spacing: 0.6px;
+@media (max-width: 767px) {
+	.leftTextBlock {
+		display: block;
+		margin-top: 20px;
+		padding-left: 14px;
 
-        @media (max-width: 767px) {
-            // Стили для мобильных
-        }
+		&__leftText {
+			width: 361px;
+			height: 136px;
+			font-size: 28px;
+			font-style: normal;
+			letter-spacing: 0.28px;
+		}
 
-        @media (min-width: 768px) {
-            // Стили для планшетов и десктопов
-        }
-    }
+		&__leftSmallText {
+			width: 327px;
+			height: 66px;
+			font-size: 18px;
+			letter-spacing: 0.18px;
+			margin-top: 19px;
+		}
 
-    .leftTextUnderBlock {
-        width: 534px;
+		&__buttonBlueUnderText {
+			font-size: 20px;
+			letter-spacing: 0.20px;
+		}
+	}
 
-        @media (max-width: 375px) {
-            width: 100%; // Full width for mobile screens
-        }
-    }
-
-    .leftSmallText {
-        color: #000;
-        font-family: 'Inter', sans-serif;
-        font-size: 1.25rem; // Adjust font size using rem units
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: 0.2px;
-
-        @media (max-width: 375px) {
-            font-size: 1rem; // Adjust font size for smaller screens
-        }
-    }
-
-    .buttonBlueUnderText {
-        color: #FFF;
-        font-family: 'Inter', sans-serif;
-        font-size: 1.375rem; // Adjust font size using rem units
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-        letter-spacing: 0.22px;
-
-        @media (max-width: 375px) {
-            font-size: 1.125rem; // Adjust font size for smaller screens
-        }
-    }
 }
