--- a/src/pages/Main/MainTitleTextBlock/MainTitleTextBlock.module.scss
+++ b/src/pages/Main/MainTitleTextBlock/MainTitleTextBlock.module.scss
@@ -1,14 +1,25 @@
 // SearchTitleTextBlock-01.module.scss
 .titleTextBlock {
-  width: 743px;
-  color: #000;
-  font-family: 'FerryBlack', sans-serif;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: normal;
-  letter-spacing: 0.45px;
-  margin-left: 60px;
-  margin-top: 158px;
-  margin-bottom: 60px;
+	width: 743px;
+	color: #000;
+	font-family: 'FerryBlack', sans-serif;
+	font-size: 45px;
+	font-style: normal;
+	font-weight: 900;
+	line-height: normal;
+	letter-spacing: 0.45px;
+	margin-left: 60px;
+	margin-top: 158px;
+	margin-bottom: 60px;
+}
+
+@media (max-width: 767px) {
+	.titleTextBlock {
+		width: 274px;
+		height: 68px;
+		font-size: 28px;
+		letter-spacing: 0.28px;
+		margin-left: 14px;
+		margin-top: 56px;
+	}
 }
