--- a/src/pages/Main/SecondTitleTextBlock/SecondTitleTextBlock.module.scss
+++ b/src/pages/Main/SecondTitleTextBlock/SecondTitleTextBlock.module.scss
@@ -1,12 +1,23 @@
+// SecondTitleTextBlock.module.scss
+
 
 .titleTextBlock {
-  color: #000;
-  font-family: 'FerryBlack', sans-serif;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: normal;
-  letter-spacing: 0.45px;
-  margin-left: 60px;
-  margin-top: 90px;
+	color: #000;
+	font-family: 'FerryBlack', sans-serif;
+	font-size: 45px;
+	font-style: normal;
+	font-weight: 900;
+	line-height: normal;
+	letter-spacing: 0.45px;
+	margin-left: 60px;
+	margin-top: 90px;
+}
+
+@media (max-width: 767px) {
+	.titleTextBlock {
+		font-size: 28px;
+		letter-spacing: 0.28px;
+		margin-left: 14px;
+		margin-top: 56px;
+	}
 }
